fixed import function